# ScriptingPetProj

./: .gitignore  CMakeLists.txt  CMakeSettings.json
ScriptingCore/: CMakeLists.txt  Edge.cpp  Edge.h  InputSlot.h  Node.h  OutputSlot.h  Script.cpp  Script.h  ScriptingCoreLib.h  TestClass.cpp  TestClass.h
ScriptingEditor/: CMakeLists.txt
ScriptingPetProj/: CMakeLists.txt  ScriptingPetProj.cpp  ScriptingPetProj.h
